# homeassistant-mtec-http

./: .gitignore  README.md  TODO.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: ci.yml
custom_components/mtec/: __init__.py  api.py  binary_sensor.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  entity.py  manifest.json  number.py  select.py  sensor.py  strings.json
custom_components/mtec/brand/: [email protected]
custom_components/mtec/translations/: de.json  en.json
docs/: TESTING.md
scripts/: setup-ha-test.sh
tests/: __init__.py  conftest.py  test_api.py  test_binary_sensor.py  test_climate.py  test_config_flow.py  test_conversions.py  test_coordinator.py  test_diagnostics.py  test_entity.py  test_init.py  test_number.py  test_select.py  test_sensor.py
