[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-mtec-http"
version = "1.0.0"
description = "M-TEC Heat Pump Integration for Home Assistant"
readme = "README.md"
requires-python = ">=3.13.2"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "aiohttp>=3.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-aiohttp>=1.0.5",
    "pytest-homeassistant-custom-component==0.13.316",
    "pytest-cov>=5.0.0",
    "aioresponses>=0.7.0",
    "ruff>=0.8.0",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "C4",
    "SIM",
]
ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["custom_components/mtec"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
